--- a/app/src/main/res/layout/fragment_square_card.xml
+++ b/app/src/main/res/layout/fragment_square_card.xml
@@ -7,7 +7,7 @@
     <data>
         <variable
                 name="viewModel"
-                type="com.abplus.cardsquare.utils.views.SquareCardViewModel"/>
+                type="com.abplus.cardsquare.ui.common.SquareCardViewModel"/>
     </data>
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
