--- a/app/src/main/res/layout/fragment_square_card.xml
+++ b/app/src/main/res/layout/fragment_square_card.xml
@@ -69,11 +69,15 @@
                     android:id="@+id/card_introduction_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:gravity="end"
+                    android:layout_marginTop="72dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginBottom="16dp"
+                    android:gravity="start"
+                    android:lineSpacingExtra="1pt"
                     app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintRight_toRightOf="parent"
-                    android:textSize="@dimen/fs_small"
+                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="@dimen/fs_medium"
                     android:text="@{viewModel.introduction}"
                     tools:text="自己紹介欄\n複数行の説明を入力できる。"
                     />
@@ -86,7 +90,8 @@
                     android:gravity="end"
                     app:layout_constraintBottom_toTopOf="@id/card_account_container"
                     app:layout_constraintRight_toRightOf="parent"
-                    android:textSize="@dimen/fs_small"
+                    android:lineSpacingExtra="2pt"
+                    android:textSize="@dimen/fs_medium"
                     android:text="@{viewModel.description}"
                     tools:text="下からせり上がるタイプの説明文\nこれも、複数行の説明を入力できる。"
                     />
