--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,9 +6,10 @@
     <dimen name="nav_header_height">176dp</dimen>
     <dimen name="fab_margin">16dp</dimen>
 
-    <dimen name="fs_small">5pt</dimen>
+    <dimen name="fs_small">6pt</dimen>
     <dimen name="fs_medium">7pt</dimen>
     <dimen name="fs_large">9pt</dimen>
+    <dimen name="fs_x_large">11pt</dimen>
 
     <dimen name="dia_account_icon">24dp</dimen>
 
