--- a/app/src/main/res/layout/fragment_square_card.xml
+++ b/app/src/main/res/layout/fragment_square_card.xml
@@ -7,13 +7,13 @@
     <data>
         <variable
                 name="viewModel"
-                type="com.abplus.cardsquare.ui.common.SquareCardViewModel"/>
+                type="com.abplus.cardsquare.app.ui.common.SquareCardViewModel"/>
     </data>
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="0dp">
-        <com.abplus.cardsquare.utils.views.SquareLayout
+        <com.abplus.cardsquare.app.utils.views.SquareLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
@@ -146,6 +146,6 @@
                             />
                 </LinearLayout>
             </LinearLayout>
-        </com.abplus.cardsquare.utils.views.SquareLayout>
+        </com.abplus.cardsquare.app.utils.views.SquareLayout>
     </androidx.cardview.widget.CardView>
 </layout>
